feat: added localization for errors

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -27,8 +27,12 @@
     "acc": "Já tem uma conta?",
     "login": "Entre",
     "error": {
-      "error": "Error",
-      "text": "Signup Failed"
+      "email": "Email Inválido",
+      "password": {
+        "length": "A senha deve ter no mínimo 8 caracteres",
+        "match": "As senhas não coincidem",
+        "numsym": "A senha deve conter pelo menos um símbolo (!, @, #, $, %, &, *, ?) e um número (0-9)"
+      }
     }
   }
 }
