--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,12 +27,19 @@
     "acc": "Already have an account?",
     "login": "Login",
     "error": {
+      "error": "Error",
+      "text": "Signup Failed",
+      "inUse": "Email already in use",
       "email": "Invalid Email",
       "password": {
         "length": "Password must be at least 8 characters",
         "match": "Passwords do not match",
         "numsym": "Password must contain at least a symbol (!, @, #, $, %, &, *, ?) and a number (0-9)"
       }
+    },
+    "success": {
+      "success": "Success",
+      "text": "Signup Successful"
     }
   }
 }
